force-app/main/default/objects/breg_WEB_WEB_ADDRESSES__c/breg_WEB_WEB_ADDRESSES__c.object-meta.xml
<CustomObject>
    <label>WEB ADDRESSES</label>
    <nameField>
        <label>WEB ADDRESSES Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WEB ADDRESSESs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>