force-app/main/default/objects/breg_WEB_WEB_ADDRESSES__c/fields/breg_WEB_ADDRESS_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_ADDRESS_ID__c</fullName>
    <externalId>true</externalId>
    <label>ADDRESS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>