force-app/main/default/objects/breg_WEB_WEB_ADDRESSES__c/fields/breg_WEB_ADDRESS_LINE_1__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_ADDRESS_LINE_1__c</fullName>
    <label>ADDRESS LINE 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>