force-app/main/default/objects/breg_WEB_WEB_ADDRESSES__c/fields/breg_WEB_ADDRESS_TYPE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_ADDRESS_TYPE__c</fullName>
    <label>ADDRESS TYPE</label>
    <length>5</length>
    <type>Text</type>
</CustomField>