force-app/main/default/objects/breg_WEB_WEB_ADDRESSES__c/fields/breg_WEB_CITY__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_CITY__c</fullName>
    <label>CITY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>