force-app/main/default/objects/breg_WEB_WEB_ADDRESSES__c/fields/breg_WEB_COUNTRY_CODE_2__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_COUNTRY_CODE_2__c</fullName>
    <label>COUNTRY CODE 2</label>
    <length>2</length>
    <type>Text</type>
</CustomField>