force-app/main/default/objects/breg_WEB_WEB_ADDRESSES__c/fields/breg_WEB_POSTAL_CODE__c.field-meta.xml
<CustomField>
    <fullName>breg_WEB_POSTAL_CODE__c</fullName>
    <label>POSTAL CODE</label>
    <length>12</length>
    <type>Text</type>
</CustomField>